--- a/views/add.ejs
+++ b/views/add.ejs
@@ -21,16 +21,16 @@
                 <!-- To make this form functional, sign up at-->
                 <!-- https://startbootstrap.com/solution/contact-forms-->
                 <!-- to get an API token!-->
-                <form id="contactForm" data-sb-form-api-token="API_TOKEN" action="/portfolio" method="POST">
+                <form id="contactForm" method="POST" action="/portfolio" enctype="multipart/form-data">
                     <!-- Title input-->
                     <div class="form-floating mb-3">
-                        <input class="form-control" id="name" type="text" placeholder="Enter your title..." data-sb-validations="required" />
+                        <input class="form-control" name="title" id="name" type="text" placeholder="Enter your title..." data-sb-validations="required" />
                         <label for="name">Title Portfolio</label>
                         <div class="invalid-feedback" data-sb-feedback="name:required">A title is required.</div>
                     </div>
                     <!-- Description address input-->
                     <div class="form-floating mb-3">
-                        <textarea class="form-control" id="message" type="text" placeholder="Enter your description here..." style="height: 10rem" data-sb-validations="required"></textarea>
+                        <textarea class="form-control" name ="description" id="message" type="text" placeholder="Enter your description here..." style="height: 10rem" data-sb-validations="required"></textarea>
                         <label for="message">Description</label>
                         <div class="invalid-feedback" data-sb-feedback="message:required">A description is required.</div>
                     </div>
@@ -41,14 +41,7 @@
                     <!---->
                     <!-- This is what your users will see when the form-->
                     <!-- has successfully submitted-->
-                    <div class="d-none" id="submitSuccessMessage">
-                        <div class="text-center mb-3">
-                            <div class="fw-bolder">Form submission successful!</div>
-                            To activate this form, sign up at
-                            <br />
-                            <a href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a>
-                        </div>
-                    </div>
+                   
                     <!-- Submit error message-->
                     <!---->
                     <!-- This is what your users will see when there is-->
